docker/config/flowable-sidecar.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: ingress_listener_flowable
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_flowable
                codec_type: AUTO
                use_remote_address: true
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: ingress_flowable
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                            case_sensitive: false
                          route:
                            timeout:
                              seconds: 0
                            cluster: flowable-all-in-one
                http_filters:
                  - name: envoy.filters.http.router
    - name: egress_listener_nodejs
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: egress_nodejs
                codec_type: AUTO
                route_config:
                  virtual_hosts:
                    - name: egress_nodejs
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                            case_sensitive: false
                          route:
                            timeout:
                              seconds: 0
                            cluster: egress_nodejs
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: flowable-all-in-one
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: flowable-all-in-one
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: flowable-all-in-one-app
                      port_value: 8080
    - name: egress_nodejs
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: egress_nodejs
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 3000
